# heera-core

./: CMakeLists.txt  README.md
desktop-daemon/: CMakeLists.txt  Desktop.qml  main.cpp  settings.cpp
desktop-daemon/translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  ml_IN.ts  ms_MY.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts  zh_TW.ts
hotkeys/: CMakeLists.txt  hotkeys.cpp  hotkeys.h  main.cpp
notification-daemon/: CMakeLists.txt  application.cpp  application.h  main.cpp  notification.cpp  notification.h  notificationmanager.cpp  notificationmanager.h
notification-daemon/qml/: NotificationDisplay.qml  main.qml
polkit-agent/: CMakeLists.txt  heera-polkit-agent.desktop  main.cpp  main.qml
polkit-agent/translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  ml_IN.ts  ms_MY.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts  zh_TW.ts
screen-brightness/: CMakeLists.txt  main.cpp  org.heera.brightness.pkexec.policy
session/: CMakeLists.txt  application.cpp  heera-xsession.desktop  org.heera.Session.xml  processmanager.cpp
settings-daemon/: CMakeLists.txt  application.cpp
settings-daemon/audio/: org.heera.Audio.xml
settings-daemon/battery/: battery.cpp  org.heera.PrimaryBattery.xml
settings-daemon/brightness/: brightnessmanager.cpp  brightnessmanager.h  org.heera.Brightness.xml
settings-daemon/language/: language.cpp  org.heera.Language.xml
settings-daemon/theme/: org.heera.Theme.xml  thememanager.cpp
settings-daemon/translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  (+24 more)
shutdown-ui/: CMakeLists.txt  actions.cpp  main.cpp
shutdown-ui/translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  bg_BG.ts  cs_CZ.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  es_MX.ts  et_EE.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  ml_IN.ts  ms_MY.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sr_RS.ts  th_TH.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts  zh_TW.ts
xembed-sni-proxy/: CMakeLists.txt
